# conduit

./: .env.example  .gitignore  Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  netlify.toml  package-lock.json  package.json  render.yaml  server.js  test-file-search-alias.js  test-namespace-mapping.js  test-stateful-mapping-streaming.js  test-stateful-mapping.js  test-tool-call.js  test-tool-calling-resilience.js  test-web-search.js
api/: index.js
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
docs/: ARCHITECTURE.md  PHASES.md  PRD.md  RULES.md  TASKS.md  TESTING.md
docs/superpowers/: README.md
lib/: hash.js  keys.js  middleware.js  rateLimits.js  supabase.js  tokens.js
netlify/functions/: audit.js  auth.js  keys.js  logs.js  metrics.js  package-lock.json  package.json  settings.js
public/: app.js  index.html  style.css
scripts/: check_namespace_in_fc.py  generate-temp-key.js  query-logs.js  query-mcp-tools.py  query-sqlite-logs.py  query-sqlite.js  query-sqlite.py  query-tool-logs.py  rotate-chatgpt-auth.sh  search-request-tools.py  validate-specs.js  verify-models.mjs
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs
src/auth/: cookie.rs  mod.rs  token_manager.rs
src/chatgpt/: client.rs  dpl.rs  headers.rs  mod.rs  models.rs  pow.rs  prekey.rs  sentinel.rs  warmup.rs
src/conversation/: cache.rs  hash.rs  mod.rs
src/routes/: auth.rs  chat.rs  files.rs  keys.rs  mod.rs  models.rs  (+1 more)
supabase/: config.toml
tests/: test-e2e.js
(+29 files in other folders)
