[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
base64 = "0.22"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3.32"
hex = "0.4.3"
lazy_static = "1.5"
rand = "0.8"
regex = "1.11"
wreq = { version = "6.0.0-rc.29", features = ["cookies", "json", "stream", "gzip", "brotli", "deflate", "multipart", "socks"] }
wreq-util = "3.0.0-rc.14"
scraper = "0.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sha3 = "0.12.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = { version = "1.24.0", features = ["v4"] }
tokio-stream = "0.1.18"
tokio-rusqlite = "0.7.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
bcrypt = "0.19.2"
axum-extra = { version = "0.12.6", features = ["typed-header", "cookie"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
urlencoding = "2.1.3"
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
assert_matches = "1.5.0"
axum-test = "21.0.0"
serial_test = "3.5.0"
tempfile = "3.27.0"
tokio-stream = "0.1.18"
wiremock = "0.6.5"
